terraform/generated/vpc/aws_route_table_association.tf
resource "aws_route_table_association" "rtbassoc_002ab6fc9130daf36" {
  route_table_id = "rtb-0e001cff6079c7c1e"
  subnet_id      = "subnet-096303542f2113a20"
}

resource "aws_route_table_association" "rtbassoc_0092618a6f0b23851" {
  route_table_id = "rtb-02056949513302f39"
  subnet_id      = "subnet-0680aa96bc65f072d"
}

resource "aws_route_table_association" "rtbassoc_03f27a0a672905b52" {
  route_table_id = "rtb-0f8e708d7686aeffe"
  subnet_id      = "subnet-0d9fc337565eaccd1"
}

resource "aws_route_table_association" "rtbassoc_044cd64861703b50e" {
  route_table_id = "rtb-0b69ef69e0995469a"
  subnet_id      = "subnet-00624cc56bc520484"
}

resource "aws_route_table_association" "rtbassoc_0495c02f746d3c470" {
  route_table_id = "rtb-02056949513302f39"
  subnet_id      = "subnet-076f8b852c6b60060"
}

resource "aws_route_table_association" "rtbassoc_08baea68a09b080e9" {
  route_table_id = "rtb-02056949513302f39"
  subnet_id      = "subnet-07402e5b661b23bec"
}

resource "aws_route_table_association" "rtbassoc_09358be110c068e24" {
  route_table_id = "rtb-0b69ef69e0995469a"
  subnet_id      = "subnet-08f964badcff95e70"
}

resource "aws_route_table_association" "rtbassoc_0971725bd74cdc053" {
  route_table_id = "rtb-01b841faa1acf44ab"
  subnet_id      = "subnet-04e27b7af0a76d7ee"
}

resource "aws_route_table_association" "rtbassoc_09d38cf3a7cb8ad96" {
  route_table_id = "rtb-0b69ef69e0995469a"
  subnet_id      = "subnet-0a92863259a3cd002"
}

resource "aws_route_table_association" "rtbassoc_0a2a72809b8cf4006" {
  route_table_id = "rtb-0f8e708d7686aeffe"
  subnet_id      = "subnet-05abe9522c20e70aa"
}

resource "aws_route_table_association" "rtbassoc_0dfa1b38d0e63d84f" {
  route_table_id = "rtb-0c3d02600a29b9644"
  subnet_id      = "subnet-05203dc92b0823553"
}
