terraform/generated/vpc/aws_vpc_security_group_egress_rule.tf
resource "aws_vpc_security_group_egress_rule" "sgr_0008e09760c6ce549" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-07f009cc182a06a04"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0017480b9d0a8fb45" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0d799b653c4043218"
}

resource "aws_vpc_security_group_egress_rule" "sgr_00ae39d5c8abf5269" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0f5539d3e349bae63"
}

resource "aws_vpc_security_group_egress_rule" "sgr_00c8263bc55addec6" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0b0eed2b18edcbfaa"
}

resource "aws_vpc_security_group_egress_rule" "sgr_00e6c7e266f76ff24" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-00a3f418f039eac2a"
}

resource "aws_vpc_security_group_egress_rule" "sgr_00ec2b73937425668" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-00980b7da446e1fe7"
}

resource "aws_vpc_security_group_egress_rule" "sgr_00f573912af4a201e" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-091b35fd5feaac3d0"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0173b147b50765e76" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-07f009cc182a06a04"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_01baf459c8a5fd2f4" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0664cb51cf00919ed"
}

resource "aws_vpc_security_group_egress_rule" "sgr_01f2179b6e64845a7" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-026b3cb094746c939"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02284d6bf4aab35fd" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-06d03510b3f32b683"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0238f572b04d058bb" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-08a68e02fea2591df"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02544415dc8392be4" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-006b0c4ba4ce0eed7"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_025d7ea8d84730073" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-03365a1e4d5ef869d"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02a24544af46103ea" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0cea0f3c33135fbaa"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02a69519770b076b2" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0296b2368533e84a8"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02acbac88be7fa3e4" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0615d31b0d6d092d3"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02bcb3ff8edaf4e40" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0c57e293d12c4ba08"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02cd69a761c172298" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-09655a5d35c96b651"
}

resource "aws_vpc_security_group_egress_rule" "sgr_02d52adb904ddf8ba" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-03769d92c81a37e14"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0302aeda750cf2745" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-01d6cae62e5454846"
}

resource "aws_vpc_security_group_egress_rule" "sgr_036c871c20caa0573" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-00d2e39f749c9f80c"
}

resource "aws_vpc_security_group_egress_rule" "sgr_03ba7972ef148c26c" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0ab678abfaabcacf3"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_04317c4550dbcd126" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0e3da0334f6f1024d"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0445ec08807fdae91" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0a8d1d3a2d1effe5d"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_047a699ef0a0a65e4" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-07fbaf379b52f13b0"
}

resource "aws_vpc_security_group_egress_rule" "sgr_048b89db062be0b99" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0e3e058433a4793a7"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_04b4dab305abe13b7" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-05b689cdd90002026"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_04bd2d72d3a7f38b5" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0848e0e98be81d011"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_04e2fd96fdbc08a80" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-00e4e569f9e6920de"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_04fc4f005d983584b" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-05da8fce7414d294c"
}

resource "aws_vpc_security_group_egress_rule" "sgr_052e10e10a8fa0dad" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-096a6ba8268eef3f6"
}

resource "aws_vpc_security_group_egress_rule" "sgr_05617bf71391cb065" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0313ffdf68606e618"
}

resource "aws_vpc_security_group_egress_rule" "sgr_056e010f2ff919e84" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-05b689cdd90002026"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0584c953a9a7102e9" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-05ec1afb8e4b24a12"
}

resource "aws_vpc_security_group_egress_rule" "sgr_05a5dab52e7d9d5cc" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0abf393744a38edb1"
}

resource "aws_vpc_security_group_egress_rule" "sgr_05ced2598080e8119" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-02b8e9f6f4fa195b6"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0636b480522204e67" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0a8d1d3a2d1effe5d"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_064b233a6746f4994" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0cb65ab88426db217"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0688e4a4bfeba631f" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0e3e058433a4793a7"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_06a1cbeb7d5942bc0" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0ce67711c9eb8e894"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_06c247a8d01eccf4e" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-085eb8e3a0fba2f92"
}

resource "aws_vpc_security_group_egress_rule" "sgr_06f59a50eb3fe46fb" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-006b0c4ba4ce0eed7"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_07ab40f9930d7d9f5" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0a3723815add710c0"
}

resource "aws_vpc_security_group_egress_rule" "sgr_07bd2f69468fa944a" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0b827258e3f0559d8"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_07f9985d3d6b1a0bb" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0d25cb1fc58d097e9"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0819360df74cd6037" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0ce67711c9eb8e894"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_085d15e637659aade" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0ab678abfaabcacf3"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0913d999589beb7ad" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-081ba48ae3370758b"
}

resource "aws_vpc_security_group_egress_rule" "sgr_09d4f7be5f2a5bda6" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0e07dcad269bc9148"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0a30c3226e0682bba" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-01c091d8d9e740817"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_0ae3503a96351d754" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-02b8e9f6f4fa195b6"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_0b80842ee297621a2" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0c1125388a56a7f34"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0ba160134e34174e2" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0cc77f2002d2d75ac"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0bc6bf34c1ae7aa65" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-057a681c0afce6d70"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_0c3ae4d4614b56d99" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-034a6ff43d0aa2770"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0cf22048adacbab61" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0e3da0334f6f1024d"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_0d28474801e11128c" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-00e4e569f9e6920de"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0d4b25e0c1b63349b" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-057a681c0afce6d70"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0dce4108a0749e6cf" {
  cidr_ipv4         = "0.0.0.0/0"
  description       = "All Traffic"
  from_port         = 0
  ip_protocol       = "tcp"
  security_group_id = "sg-09ec086d4a18f2267"
  to_port           = 65535
}

resource "aws_vpc_security_group_egress_rule" "sgr_0edc4fc15746b7386" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-0b827258e3f0559d8"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0f29c42bacf56fa8f" {
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
  security_group_id = "sg-0961642367dac1a13"
}

resource "aws_vpc_security_group_egress_rule" "sgr_0f2c400076650f3a9" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  security_group_id = "sg-01c091d8d9e740817"
  to_port           = 443
}

resource "aws_vpc_security_group_egress_rule" "sgr_0fd1341f5d1a6804d" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0848e0e98be81d011"
  to_port           = 80
}

resource "aws_vpc_security_group_egress_rule" "sgr_0ffadf9f6b9e5982f" {
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  security_group_id = "sg-0e07dcad269bc9148"
  to_port           = 80
}
